// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / TabsNav Integration: With react-router 1`] = `
.c10 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c8 {
  height: 44px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  height: 44px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c2 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

@media (min-width:760px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c3 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c3 > *:not(:first-child) {
    padding-top: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="c2 c3"
      direction="row"
    >
      <li
        className="c1"
      >
        <span
          className="c4"
        >
          <a
            className="c5"
            href="/route1"
            onClick={[Function]}
          >
            <span
              className="c6"
              height={11}
            >
              Link to /route1
            </span>
          </a>
        </span>
      </li>
      <li
        className="c1"
      >
        <span
          className="c7"
        >
          <a
            className="c5"
            href="/route2"
            onClick={[Function]}
          >
            <span
              className="c8"
              height={11}
            >
              <div>
                Link to /route2
              </div>
            </span>
          </a>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <div
      className="c9"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c10"
    >
      /route1 content
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / TabsNav Integration: With react-router and height modified 1`] = `
.c10 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c8 {
  height: 96px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  height: 96px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c2 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

@media (min-width:760px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c3 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c3 > *:not(:first-child) {
    padding-top: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="c2 c3"
      direction="row"
    >
      <li
        className="c1"
      >
        <span
          className="c4"
        >
          <a
            className="c5"
            href="/route1"
            onClick={[Function]}
          >
            <span
              className="c6"
              height={24}
            >
              Link to /route1
            </span>
          </a>
        </span>
      </li>
      <li
        className="c1"
      >
        <span
          className="c7"
        >
          <a
            className="c5"
            href="/route2"
            onClick={[Function]}
          >
            <span
              className="c8"
              height={24}
            >
              <div>
                Link to /route2
              </div>
            </span>
          </a>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <div
      className="c9"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c10"
    >
      /route1 content
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / TabsNav Integration: conditionally hide tab 1`] = `
.c8 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c6 {
  height: 44px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c2 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

@media (min-width:760px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c3 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c3 > *:not(:first-child) {
    padding-top: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="c2 c3"
      direction="row"
    >
      <li
        className="c1"
      >
        <span
          className="c4"
        >
          <a
            className="c5"
            href="/route2"
            onClick={[Function]}
          >
            <span
              className="c6"
              height={11}
            >
              <div>
                Link to /route2
              </div>
            </span>
          </a>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <div
      className="c7"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c8"
    >
      /route1 content
    </div>
  </div>
</div>
`;
